# ImSharp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
ImSharp/: ImSharp.sln
ImSharp/ImSharp.Core/: Exception.cs  IComponentRenderer.cs  IWindow.cs  IWindowSystem.cs  WindowCreationException.cs
ImSharp/ImSharp.OpenGL/: WindowSystem.cs
ImSharp/ImSharp.OpenGL.Example/: ImSharp.OpenGL.Example.csproj  Program.cs
ImSharp/ImSharp.OpenGL.Example/Properties/: launchSettings.json
ImSharp/ImSharp.OpenGL.Native/: CMakeLists.txt  README.md  imsharp.cpp  imsharp.hpp  imsharp_example.cpp  setup.ps1
ImSharp/ImSharp.OpenGL.Native/examples/: CMakeLists.txt  minimal.cpp  style_editor.cpp  texture.cpp
ImSharp/ImSharp.OpenGL.Native/fonts/: CMakeLists.txt  all_fonts.cpp  all_fonts.hpp
ImSharp/ImSharp.OpenGL.Native/glad/include/glad/: glad.h
ImSharp/ImSharp.OpenGL.Native/glad/src/: glad.c
ImSharp/ImSharp.OpenGL.Native/include/: imsharp.h  imsharp_app.h  imsharp_common.h  imsharp_frame.h  imsharp_global.h  imsharp_texture.h  imsharp_ui.h  imsharp_ui_data_visualization.h  imsharp_window.h
ImSharp/ImSharp.OpenGL.Native/include/imsharp/: app.h  common.h  frame.h  global.h  texture.h  ui.h  window.h
ImSharp/ImSharp.OpenGL.Native/include/imsharp/ui/: data_visualization.h
ImSharp/ImSharp.OpenGL.Native/src/: app.cpp  global.cpp  imsharp.cpp  style.hpp  style_editor.cpp  texture.cpp  texture.hpp  ui.cpp  window.cpp  window.hpp
ImSharp/ImSharp.OpenGL/Impl/: ComponentRenderer.cs  Window.cs
ImSharp/ImSharp.TestDoubles/: FakeWindow.cs  FakeWindowSystem.cs  ImSharp.TestDoubles.csproj
ImSharp/ImSharp.Vulkan/: WindowSystem.cs
ImSharp/ImSharp.Vulkan.Example/: ImSharp.Vulkan.Example.csproj  Program.cs
ImSharp/ImSharp.Vulkan.Native/: CMakeLists.txt  imsharp.cpp  imsharp.hpp
ImSharp/ImSharp.Vulkan/Impl/: Window.cs
